--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap");
     </style>
+    <script
+      src="https://kit.fontawesome.com/1336c04794.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1 class="heading">Minimax Tic-Tac-Toe</h1>
@@ -61,6 +65,13 @@
           </tr>
         </table>
       </div>
+    </div>
+
+    <div class="contacts">
+      <a href="https://www.linkedin.com/in/akshat-dhiman-6b558a250/"
+        ><i class="fa fa-linkedin" aria-hidden="true"></i
+      ></a>
+      <a href="https://github.com/Akshat120"><i class="fa fa-github"></i></a>
     </div>
     <script src="./game.js"></script>
   </body>
